increased list min width to fix overlapping text

--- a/style.less
+++ b/style.less
@@ -33,7 +33,7 @@ body {
 #canvasWrapper {
     // max-width: 1233px;
     display: grid;
-    grid-template-columns: 1fr minmax(auto, 71em) 1fr;
+    grid-template-columns: 1fr minmax(auto, 90em) 1fr;
 }
 
 #canvas {
@@ -124,7 +124,7 @@ h3 {
 
 .grid-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(11em, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(13em, 1fr));
 }
 
 
